[package]
name = "anchor-wormhole"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_wormhole"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.25.0"
wormhole-solana = { git = "https://github.com/wormhole-foundation/wormhole", branch = "reisen/sdk-cleanup"}
